--- a/projects/1/style.css
+++ b/projects/1/style.css
@@ -32,8 +32,9 @@ margin-top: 30px;}
 margin-right: 35px;}
 .t{
  margin-right: 10px;}
- ul{
-     margin-top: 0px;
+ ul{ float: left;
+     margin: 0px;
+     padding: 0px;
  }
 li{
 float: left;
@@ -41,7 +42,7 @@ list-style-type: none;
 margin: 20px 10px 20px;
 }
 .one{
-    margin-top: 10px;
+margin: 10px;
 background: #0772BF;
 border-radius: 4px;
 width: 145px;
@@ -68,11 +69,12 @@ p{
     color: red;
 }
 .rasporka{
-    margin-bottom: 0px;
+    margin: 0px;
+    clear: both;
 }
 .banner{
-    background: url(img/banner.png) no-repeat;
-    width: 1428px;
+    background: url(img/banner.png) no-repeat center;
+    width: 100%;
     height: 464px;
     margin-left: auto;
     margin-right: auto;
@@ -95,3 +97,4 @@ h3{
     font-weight: 600;
     padding-top: 5px;
 }
+.A {padding-left: 70px;}
