--- a/projects/1/style.css
+++ b/projects/1/style.css
@@ -1,4 +1,6 @@
-* {box-sizing: border-box;}
+* {box-sizing: border-box;
+margin: 0px;
+padding: 0px;}
 body{
 font-family: 'Open Sans', sans-serif;
 margin-bottom: 0px;}
@@ -74,8 +76,7 @@ p{
 }
 .banner{
     background: url(img/banner.png) no-repeat center;
-    width: 100%;
-    height: 464px;
+    background-size: 100%;
     margin-left: auto;
     margin-right: auto;
     overflow: hidden;
