--- a/projects/1/style.css
+++ b/projects/1/style.css
@@ -27,8 +27,7 @@ float: left;}
 .im {
  margin: 9px;
  float: left;}
-.menu
-{float: right;
+.menu{float: right;
 margin-top: 30px;}
 .v {
 margin-right: 35px;}
@@ -36,15 +35,13 @@ margin-right: 35px;}
  margin-right: 10px;}
  ul{ float: left;
      margin: 0px;
-     padding: 0px;
- }
-li{
+     padding: 0px;}
+div.header2 div.container li{
 float: left;
 list-style-type: none;
-margin: 20px 10px 20px;
-}
-.one{
-margin: 10px;
+margin: 20px 10px 0px;}
+div.header2 div.container ul li.one{
+margin-top: 10px;
 background: #0772BF;
 border-radius: 4px;
 width: 145px;
@@ -53,9 +50,8 @@ color: #FFFFFF;
 font-weight: 600;
 margin-left: 20px;
 text-align: center;
-padding-top: 10px;
-}
-p{
+padding-top: 10px;}
+div.line p{
     width: 14px;
     height: 0px;
     border: 1px solid #FFFFFF;
@@ -75,18 +71,19 @@ p{
     clear: both;
 }
 .banner{
+    width: 100%;
     background: url(img/banner.png) no-repeat center;
     background-size: 100%;
     margin-left: auto;
     margin-right: auto;
+    padding: 128px 0 156px;
     overflow: hidden;
     color: #FFFFFF;
     
 }
 h1{ 
-margin-top: 128px;
 font-weight: 700;}
-h3{
+h3{ margin:20px 0px 40px;
     font-weight: 400;
 }
 .button{
@@ -99,3 +96,19 @@ h3{
     padding-top: 5px;
 }
 .A {padding-left: 70px;}
+.filter {
+float: left;
+width: 260px;}
+div.filter img {float: right; margin-top: 20px; margin-bottom: 20px;}
+div.filter p {float: left; width: 90%;}
+div.filter span {color: #BFBEBE; font-size: 16px;}
+div.container div.filter ul {color: #BFBEBE;margin-left: 20px;}
+div.filter li {color: #BFBEBE; list-style-image: url(img/Re.png);margin: 5px 0px 0px 5px;}
+div.catalog p{margin: 10px 0px 10px;}
+div.filter p:nth-of-type(3){margin-top: 50px;}
+div.filter p:nth-of-type(2){color: #BFBEBE;}
+div.filter h3{ margin-bottom: 0; font-weight: 700; font-size: 34px;}
+div.catalog {margin-top: 60px;}
+div.catalog div.products p{margin-top: 51px;}
+div.products ul li {list-style: none;}
+div.products ul li:nth-of-type(2){float: right;}
