--- a/FinalProject/css/variables.scss
+++ b/FinalProject/css/variables.scss
@@ -14,7 +14,7 @@ $white: #FFFFFF;
 $gold: #9d8665;
 $red: #710707;
 $bgdark: #030303;
-$hover: #9D8665;
+$unvisited: #D2B183;
 //containers
 $xxl: 1440px;
 
