--- a/FinalProject/css/style.scss
+++ b/FinalProject/css/style.scss
@@ -4,6 +4,17 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;}
+h1, h2, h3{
+        font-family: 'Forum';
+        font-weight: 400;
+        font-size: $fz80;
+        letter-spacing: 5px;
+        text-transform: uppercase;}
+p{font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 22px;
+    color: #FFFFFF;}
 body{
     height: 11210px;
     font-family: 'Forum', cursive;
@@ -15,7 +26,8 @@ body{
     width: $xxl;;
     margin: 0 auto;
 }
-a{color: inherit;
+a{
+    color: inherit;
 text-decoration: none;}
 li{
     list-style-type: none;
@@ -24,15 +36,22 @@ li{
 .header{
     background-color: $bgdark;
     height: 150px;
+    position: sticky;
+    top: 0;
+    z-index: 3;
     .container{
     display: flex;
+    h3{display: inline;
+    color: $white;
+    font-size: 28px;
+    margin-left: 20px;}
         img{margin-top: 62px ;}
     justify-content: space-between;
         .menu{display: flex;
             li{margin: 62px 0px 55px 65px;
             a{ font-size: $fz;
                 color: $white;
-                &hover{ color: $hover;}
+                &hover{ color: $gold;}
             }
             }
         }
@@ -49,15 +68,11 @@ li{
                 position: relative;
                 color: $white;
                 h1{
-                font-family: 'Forum';
-                font-weight: 400;
-                font-size: $fz80;
                 position: relative;
                 top: 150px;
                 z-index: 1;
                 order: 1;
                 margin-right: -160px;
-                letter-spacing: 5px;
                 span{
                     font-family: 'Roboto';
                     font-weight: 300;
@@ -91,3 +106,36 @@ li{
     bottom: 0px;
     background-color: $bgdark;
 color: white;}
+//virtualTour
+.virtualTour{
+    .container{
+        h2{color: $gold;
+        margin: 75px 0px 25px;}
+        .line{border: solid $red 1px}
+        .cardsPlaces{
+            ul{display: grid;
+                grid-template-columns: 440px 560px 440px;
+                grid-template-rows: 450x 450px 450px;
+                li{
+                    img{margin-top: 75px;}
+                    .line{width: 300px;}
+                    h3{font-size: $fz32;margin-top: 25px}
+                    p{font-size: $fz;
+                    span{font-size: $fz18;}}
+                }
+                li:nth-child(2),li:nth-child(5){margin: 0px 60px 0px;}
+              
+            };
+        
+        }
+        
+    }
+}
+//Explorer
+.explorer{background-color: $bgdark;
+    .container{ display: flex;
+        .text{
+            h2{color: $white;}
+        }
+        .picture{[alt=whit]{margin-top: -440px;}}
+    }}
