--- a/FinalProject/css/style.scss
+++ b/FinalProject/css/style.scss
@@ -3,7 +3,9 @@
 *{
     margin: 0px;
     padding: 0px;
-    box-sizing: border-box;}
+    box-sizing: border-box;
+    margin-block-start: 0px;
+    margin-block-end: 0px;}
 h1, h2, h3{
         font-family: 'Forum';
         font-weight: 400;
@@ -120,7 +122,7 @@ color: white;}
                     img{margin-top: 75px;}
                     .line{width: 300px;}
                     h3{font-size: $fz32;margin-top: 25px}
-                    p{font-size: $fz;
+                    p{font-size: $fz; color: black;
                     span{font-size: $fz18;}}
                 }
                 li:nth-child(2),li:nth-child(5){margin: 0px 60px 0px;}
@@ -132,10 +134,46 @@ color: white;}
     }
 }
 //Explorer
-.explorer{background-color: $bgdark;
+.explorer{ position: relative;
+    background-color: $bgdark;
+    margin-top: 75px;
+    padding: 90px 0px 300px;
     .container{ display: flex;
-        .text{
+        position: relative;
+            .text{flex: 2 2 50%; margin-right: 60px;
+                .line{border: solid $red 1px;
+                width: 660px;
+            margin: 25px 0px 75px;}
+            p{font-family: 'Roboto';
+                font-style: normal;
+                font-weight: 300;
+                font-size: 22px;
+                line-height: 38px;}
+                margin-bottom: 25px;
+            span{color: $gold;}}
             h2{color: $white;}
         }
-        .picture{[alt=whit]{margin-top: -440px;}}
-    }}
+        .picture{ flex: 1 1 50%;
+            [alt=whit]{position: absolute; 
+            top: 15px;
+            left: 720px;
+            z-index: 0;}
+            [alt=yellow]{position: absolute;
+                left: 720px; 
+                top: 15px;
+                z-index: 1;
+    }}}
+    ////VideoJourney
+    .videoJourney{
+        .container{
+        .text{display: flex;
+            margin: 75px 0px 75px; 
+        h1{flex:50%;
+        color: $gold;
+    }
+        p{color: black;
+        flex: 50%;
+        font-style: normal;
+        line-height: 38px;
+        align-items: center;}
+    }}}
