--- a/FinalProject/css/style.scss
+++ b/FinalProject/css/style.scss
@@ -175,5 +175,12 @@ color: white;}
         flex: 50%;
         font-style: normal;
         line-height: 38px;
-        align-items: center;}
-    }}}
+        align-items: center;}}
+        .videos{
+        margin-top: 40px;
+            display: grid;
+        grid-template-columns: 452px 452px 452px;
+        grid-template-rows: 254px;
+        grid-column-gap: 40px;
+        iframe{width:100%;
+             height:100%}}}}
