--- a/FinalProject/css/style.scss
+++ b/FinalProject/css/style.scss
@@ -138,7 +138,8 @@ color: white;}
     background-color: $bgdark;
     margin-top: 75px;
     padding: 90px 0px 300px;
-    .container{ display: flex;
+    .container
+    { display: flex;
         position: relative;
             .text{flex: 2 2 50%; margin-right: 60px;
                 .line{border: solid $red 1px;
@@ -151,8 +152,7 @@ color: white;}
                 line-height: 38px;}
                 margin-bottom: 25px;
             span{color: $gold;}}
-            h2{color: $white;}
-        }
+            h2{color: $white;}}
         .picture{ flex: 1 1 50%;
             [alt=whit]{position: absolute; 
             top: 15px;
@@ -163,12 +163,12 @@ color: white;}
                 top: 15px;
                 z-index: 1;
     }}}
-    ////VideoJourney
+    //VideoJourney
     .videoJourney{
         .container{
         .text{display: flex;
             margin: 75px 0px 75px; 
-        h1{flex:50%;
+        h2{flex:50%;
         color: $gold;
     }
         p{color: black;
@@ -177,10 +177,22 @@ color: white;}
         line-height: 38px;
         align-items: center;}}
         .videos{
-        margin-top: 40px;
+        margin: 40px 0px 120px;
             display: grid;
-        grid-template-columns: 452px 452px 452px;
+        grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: 254px;
         grid-column-gap: 40px;
         iframe{width:100%;
              height:100%}}}}
+//artGallery
+.artGallery{
+    background-color: $bgdark;
+    .container{
+    padding-top: 75px;;
+    h2{
+        margin-bottom: 75px;
+        color: white;
+    }
+    .gallery{display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: repeat(auto);}}}
